map marker additions

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /backend/.env
 /backend/hacktx-9757b-firebase-adminsdk-ma0ku-5c3ab21f03.json
 /backend/hacktx-9757b-firebase-adminsdk-ma0ku-2fcf16b24c.json
+/backend/myenv/
