committing gradient changes

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /backend/hacktx-9757b-firebase-adminsdk-ma0ku-5c3ab21f03.json
 /backend/hacktx-9757b-firebase-adminsdk-ma0ku-2fcf16b24c.json
 /backend/myenv/
+/backend/venv/
