--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/material-bottom-tabs": "^6.2.29",
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-camera": "^15.0.16",
@@ -41,6 +42,7 @@
     "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "1.14.0",
+    "react-native-pager-view": "6.3.0",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
@@ -49,8 +51,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-uuid": "^2.0.2",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.10",
-    "react-native-pager-view": "6.3.0"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
