--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-image-picker": "~15.0.7",
+    "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
     "expo-router": "~3.5.23",
@@ -41,6 +42,7 @@
     "react-native": "0.74.5",
     "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.14.0",
     "react-native-pager-view": "^6.3.0",
     "react-native-paper": "^5.12.5",
